<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.TermosDeUso">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!--Cabeçalho-->
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                app:cardCornerRadius="4dp"
                app:cardElevation="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/colorDenimBlue"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/imageView2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_margin="10dp"
                            android:onClick="voltar"
                            app:srcCompat="@drawable/abc_vector_test" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_horizontal">

                            <TextView
                                android:id="@+id/txtTituloTermosDeUso"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:layout_marginStart="-50dp"
                                android:layout_marginTop="8dp"
                                android:layout_marginBottom="8dp"
                                android:gravity="center_horizontal"
                                android:text="Termos de Uso"
                                android:textColor="@color/colorWhite"
                                android:textSize="30sp"
                                android:textStyle="bold" />

                        </LinearLayout>


                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <!--Termos-->
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                app:cardCornerRadius="4dp"
                app:cardElevation="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/txtAceitacao"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/txtAceitacao"
                        android:textColor="@color/colorBlack"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/mensagemAceitacao"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/mensagemAceitacao"
                        android:textColor="@color/colorBlack"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/txtLicenca"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/txtLicenca"
                        android:textColor="@color/colorBlack"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/mensagemLicenca"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/mensagemLicenca"
                        android:textColor="@color/colorBlack"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/txtAlteracoes"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/txtAlteracoes"
                        android:textColor="@color/colorBlack"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/mensagemAlteracoes"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/mensagemAlteracoes"
                        android:textColor="@color/colorBlack"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/txtConsentimento"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/txtConsentimento"
                        android:textColor="@color/colorBlack"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/mensagemConsentimento"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/mensagemConsentimento"
                        android:textColor="@color/colorBlack"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/txtIsencao"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/txtIsencao"
                        android:textColor="@color/colorBlack"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/mensagemIsencao"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/mensagemIsencao"
                        android:textColor="@color/colorBlack"
                        android:textSize="15sp" />

                    <Button
                        android:id="@+id/btnOK"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="8dp"
                        android:background="@drawable/btn_custom"
                        android:foregroundGravity="center_horizontal"
                        android:onClick="voltar"
                        android:text="OK"
                        android:textColor="@color/colorWhite" />

                </LinearLayout>


            </androidx.cardview.widget.CardView>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>