<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.Splash">

    <ImageView
        android:id="@+id/imgLogoSplash"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="180dp"
        android:foregroundGravity="center_vertical"
        android:src="@mipmap/ic_launcher_round"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/txtContentDescriptionOrganizeSplash" />

    <TextView
        android:id="@+id/txtTituloSplash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="17dp"
        android:text="@string/app_name"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgLogoSplash" />

    <ImageView
        android:id="@+id/imgInnovate"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="100dp"
        android:foregroundGravity="center_vertical"
        android:src="@drawable/innovate_logo_no_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTituloSplash"
        android:contentDescription="@string/txtContentDescriptionInnovateSplash" />

</androidx.constraintlayout.widget.ConstraintLayout>