<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_grad"
    android:orientation="vertical"
    android:padding="20dp"
    android:theme="@style/Theme.MaterialComponents.Light.NoActionBar"
    tools:context=".view.Login">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imgLogo"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="60dp"
                android:layout_marginBottom="50dp"
                android:contentDescription="@string/txtLogo"
                android:src="@mipmap/ic_launcher_round" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/emailLogin"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/txtEmail"
                    app:boxBackgroundColor="@color/colorWhite">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editEmailLogin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress">

                    </com.google.android.material.textfield.TextInputEditText>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/PasswordLogin"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:boxBackgroundColor="@color/colorWhite"
                    app:endIconMode="password_toggle">


                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editPasswordLogin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/txtSenha"
                        android:inputType="textPassword">

                    </com.google.android.material.textfield.TextInputEditText>

                </com.google.android.material.textfield.TextInputLayout>

                <androidx.appcompat.widget.AppCompatCheckBox
                    android:id="@+id/chRemember"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_marginStart="2dp"
                    android:layout_marginTop="13dp"
                    android:checked="false"
                    android:outlineAmbientShadowColor="@color/colorWhite"
                    android:outlineSpotShadowColor="@color/colorWhite"
                    android:shadowColor="@color/colorWhite"
                    android:text="@string/chLembrar"
                    android:textColor="@color/colorWhite"
                    android:textColorHighlight="@color/colorWhite"
                    android:textColorHint="@color/colorWhite"
                    android:textColorLink="@color/colorWhite" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnSignIn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/btn_custom_confirm_new"
                    android:text="@string/btnEntrar"
                    android:textColor="@color/colorBlack"
                    app:layout_constraintBottom_toTopOf="@+id/txtRegister"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/cardViewFormLogin3" />

            </LinearLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txtRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:gravity="center_horizontal"
                android:text="@string/txtCadastrar"
                android:textColor="@color/colorDenimBlue" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txtForgotPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/txtEsqueceuSenha"
                android:textColor="@color/colorDenimBlue" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </ScrollView>

</LinearLayout>